--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/kit": "^2.47.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@types/leaflet": "^1.9.21",
 		"@types/node": "^22",
 		"eslint": "^9.38.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"leaflet": "^1.9.4",
 		"maplibre-gl": "^5.11.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -31,6 +33,7 @@
 		"svelte": "^5.41.0",
 		"svelte-check": "^4.3.3",
 		"terra-draw": "^1.18.1",
+		"terra-draw-leaflet-adapter": "^1.1.0",
 		"terra-draw-maplibre-gl-adapter": "^1.2.2",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.46.1",
